# sharif_study_buddy

./: .gitignore  Dockerfile  README.md  cicd-sample.txt  create_telegram_session.py  docker-compose.yml  entrypoint.sh  main.py  manage.py  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
bot/: app.py  apps.py  constants.py  keyboards.py  metrics.py  tasks.py  utils.py  views.py
bot/handlers/: __init__.py  admin_handlers.py  callback_handlers.py  user_handlers.py
bot/management/commands/: start_bot.py
core/: admin.py  apps.py  config.py  exceptions.py  logging_config.py  messages.py  metrics.py  middleware.py  models.py  signals.py  tasks.py
core/migrations/: 0001_initial.py  0002_knowledgedocument_external_id.py  0003_alter_chatmessage_options_alter_chatsession_options_and_more.py  0004_chatmessage_feedback.py
core/services/: langgraph_pipeline.py  langsmith_client.py  metrics.py  openrouter.py  rag_client.py
core/tests/: __init__.py  conftest.py  test_models.py
monitoring/: admin.py  apps.py  models.py  signals.py  tasks.py
monitoring/migrations/: 0001_initial.py  0002_ingestedtelegrammessage.py  0003_ingestedtelegrammessage_rag_document_id.py  0004_rename_monitoring_ing_chan_msg_idx_monitoring__channel_a169e9_idx_and_more.py
sharif_assistant/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
